# KSteganifyer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.cmake  circle.yml  clean.sh  get_code_cov.sh  makefile
KSteganifyer/: .cproject  .project  Makefile
KSteganifyer/headers/: CFile.h  CFolder.h  CWICompositeImpl.h  CWorkItemImpl.h  Config.h  IItem.h  IIterator.h  IWIComposite.h  IWIIterator.h  IWorkItem.h
KSteganifyer/headers/Core/: CWICompositeImpl.h  CWorkItemImpl.h  IItem.h  IIterator.h  IWIComposite.h  IWIIterator.h  IWorkItem.h
KSteganifyer/headers/File/: CFile.h  CFolder.h  CFolderScanner.h
KSteganifyer/source/: CFile.cpp  CFolder.cpp  CFolderScanner.cpp  CWICompositeImpl.cpp  CWorkItemImpl.cpp  IWIIterator.cpp  main.cpp
docs/: Doxyfile.in
headers/: Application.h  ApplicationModule.h  Command.h  CommandChain.h  CommandContext.h  CommandFactory.h  DynamicLibrary.h  Logger.h  Module.h  ModuleFactory.h  ModulesManagers.h  SimpleModule.h  Types.h
modules/: CMakeLists.txt  Steganifyer.cpp  Steganifyer.h
modules/api/: Application.cpp  ApplicationModule.cpp  CMakeLists.txt  Command.cpp  CommandChain.cpp  CommandContext.cpp  CommandFactory.cpp  ModuleFactory.cpp  ModulesManager.cpp  SimpleModule.cpp
modules/mBMPIO/: BMPIO.cpp  BMPIO.h  BMPStructure.cpp  BMPStructure.h  CMakeLists.txt
modules/mSteganifyer/: CMakeLists.txt  Steganifyer.cpp  Steganifyer.h
src/: Application.cpp  Command.cpp  CommandChain.cpp  CommandContext.cpp  CommandFactory.cpp  ModulesManager.cpp  main.cpp
test/: CMakeLists.txt  test_bmp.cpp
